I have removed some template code from the website and changed the favicon and title across all pages. I have also completed the styling for the gallery page and removed the faq section.

--- a/aftatech-solutions.html
+++ b/aftatech-solutions.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:10 GMT -->
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -14,7 +12,7 @@
     <title>Aftatech-IT Solutions</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/Aftatech.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -511,5 +509,4 @@
 
 </body>
 
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:10 GMT -->
 </html>
