--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:10 GMT -->
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -14,7 +12,7 @@
     <title>Aftatech-IT Solutions</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/Aftatech.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -100,11 +98,11 @@
 
      <!-- Start Breadcrumb 
     ============================================= -->
-    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/images/alexandre-debieve-FO7JIlwjOtU-unsplash.jpg);">
+    <div class="breadcrumb-area text-center shadow dark text-light bg-cover" style="background-image: url(assets/gallery/IMG-20220810-WA0064.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <h1>All Our Services</h1>
+                    <h1>Aftatech Gallery</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
@@ -117,8 +115,8 @@
     </div>
     <!-- End Breadcrumb -->
 
-    <section class="section-padding" style="background-color:#fff">
-        <h3 class="text-center mb-10">Our Gallery</h3>
+    <section class="default-padding" style="background-color:#fff">
+        <h2 class="heading text-center mb">Our Gallery</h2>
         <div id="my_nanogallery2" style="padding: 10px 65px" data-nanogallery2>
             <a href="assets/gallery/IMG-20220810-WA0041.jpg" data-ngthumb="assets/gallery/IMG-20220810-WA0041.jpg">Aftatech Gallery Image</a>
             <a href="assets/gallery/IMG-20220810-WA0042.jpg" data-ngthumb="assets/gallery/IMG-20220810-WA0042.jpg">Aftatech Gallery Image</a>
@@ -142,94 +140,6 @@
         </div>
     </section>
 
-
-    <!-- Start Faq 
-    ============================================= -->
-    <div class="faq-area bg-gray default-padding overflow-hidden">
-        <!-- Start Shape -->
-        <div class="shape">
-            <div class="circle-shape"></div>
-            <div class="circle-shape"></div>
-        </div>
-        <!-- End  Shape -->
-        <div class="container">
-            <div class="row align-center">
-
-                <div class="col-lg-6 faq-style-one">
-                    <div class="thumb">
-                        <img src="assets/images/linkedin-sales-solutions-EI50ZDA-l8Y-unsplash.jpg" alt="Thumb">
-                    </div>
-                </div>
-                
-                <div class="col-lg-6 faq-style-one">
-                    <div class="heading-left">
-                        <h4 class="sub-title">FAQ</h4>
-                        <h2 class="heading">Most Common Question <br> About Our Services</h2>
-                    </div>
-                    <div class="accordion" id="faqAccordion">
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingOne">
-                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                How much is needed to join the Institute Training?
-                              </button>
-                           </h2>
-                           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
-                              <div class="accordion-body">
-                                    <p>
-                                        Our Institute Training covers a variety of topics for all ages. Taking the numerous factors involved into consideration, it is best for prospective students to call us at <a href="tel:+2348030947468">+2348030947468</a>, send us an email at <a href="mail:aftatechit@gmail.com">aftatechit@gmail.com</a> or visit the premises for more enquiries at 2, Babanla Street Graceland Junction, University Road, Tanke, Ilorin, Kwara State.
-                                    </p>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    How much Does Your Data Subscription Cost?
-                                </button>
-                           </h2>
-                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    <p>
-                                        We have a variety of data plans for every Nigerian Telecommunication Company. We sell daily, weekly, monthly, yearly and special plans for MTN, Glo, Airtel and Etisalat at cheaper rates than you will find anywhere. You can check out some of our plans on <a href="https://aftatechsub.com.ng/">aftatechsub.com.ng</a>.
-                                    </p>
-                                </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                           <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Do You Repair Phones And Laptop?
-                                </button>
-                           </h2>
-                           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    <p>
-                                        We repair all phones and laptops and also teach those willing to learn. We have a proven track record of graduated trainees who have gone ahead to make waves in the engineering field. Aftatech Institute is renowned in Ilorin for its strict and inclusive curriculum that alows students to make the most of their time learning in the institute.
-                                    </p>
-                                </div>
-                           </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingFour">
-                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                     What Multimedia Facilities Do You Rent Out?
-                                 </button>
-                            </h2>
-                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
-                                 <div class="accordion-body">
-                                     <p>
-                                         We rent out a range of multimedia devices for any kind of entertainment or multimedia production. This includes high-quality video cameras, audio recorders, projectors, projector screens, webcams, sound systems and equipment. All our equipment frequently undergo maintainance and come in the appropriate packaging for efficient transportation
-                                     </p>
-                                 </div>
-                            </div>
-                         </div>
-                     </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- End Faq Area -->
 
      <!-- Start Footer 
     ============================================= -->
@@ -280,5 +190,4 @@
 
 </body>
 
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:10 GMT -->
 </html>
