--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 offset-xl-1">
-                    <form action="https://validthemes.online/themeforest/crysa/assets/mail/contact.php" method="POST" class="contact-form consultation-form theme">
+                    <form action="" method="POST" class="contact-form consultation-form theme"> <!--https://validthemes.online/themeforest/crysa/assets/mail/contact.php-->
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
