--- a/contact-us.html
+++ b/contact-us.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from validthemes.online/themeforest/crysa/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:07 GMT -->
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -14,7 +12,7 @@
     <title>Aftatech - IT Solutions Company</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/Aftatech.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -177,7 +175,7 @@
                     <div class="form">
                         <h4 class="sub-heading">Contact Us</h4>
                         <h2 class="heading">Have Questions? <br> Get in Touch!</h2>
-                        <form action="https://validthemes.online/themeforest/crysa/assets/mail/contact.php" method="POST" class="contact-form contact-form">
+                        <form action="" method="POST" class="contact-form contact-form"> <!--https://validthemes.online/themeforest/crysa/assets/mail/contact.php-->
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group">
@@ -261,5 +259,4 @@
 
 </body>
 
-<!-- Mirrored from validthemes.online/themeforest/crysa/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:09 GMT -->
 </html>
