--- a/services-details.html
+++ b/services-details.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:01 GMT -->
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="utf-8">
@@ -14,7 +12,7 @@
     <title>Aftatech-service</title>
 
     <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/Aftatech.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -254,6 +252,4 @@
     <script src="assets/js/main.js"></script>
 
 </body>
-
-<!-- Mirrored from validthemes.online/themeforest/crysa/services-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 29 Jun 2022 15:00:03 GMT -->
 </html>
